# life-of-photo

./: .envrc  .gitignore  README.md  pyproject.toml  pytest.ini
.github/actions/install-python-env/: action.yml
.github/workflows/: CI.yml
life_of_photo/: game_of_life.py  gui.py
tests/: test_game_of_life.py
tests/examples/: __init__.py
